<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav1"
            android:icon="@drawable/ic_uci"
            android:checked="true"
            android:title="@string/nav_drawer_1" />

        <item
            android:id="@+id/nav2"
            android:icon="@drawable/ic_conferencias"
            android:title="@string/nav_drawer_2" />

        <item
            android:id="@+id/nav3"
            android:icon="@drawable/ic_talleres"
            android:title="@string/nav_drawer_3" />

        <item
            android:id="@+id/nav4"
            android:icon="@drawable/ic_actividades"
            android:title="@string/nav_drawer_4" />

        <item
            android:id="@+id/nav5"
            android:icon="@drawable/ic_marcador"
            android:title="@string/nav_drawer_5" />

        <item
            android:id="@+id/nav6"
            android:icon="@drawable/ic_about_us"
            android:title="@string/nav_drawer_6" />
    </group>

    <item
        android:id="@+id/navExit"
        android:icon="@drawable/ic_shutdown"
        android:title="@string/string_exit" />

</menu>