<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/uciencia_2016" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_24sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/title_main_fragment" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_text_1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_15sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:text="@string/string_objectives"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_21sdp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_objective_1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_objective_2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_objective_3" />

            <!--<Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_15sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:text="@string/string_workshops"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_21sdp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_taller_1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_taller_2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_taller_3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_taller_4" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_taller_5" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_taller_6" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_taller_7" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_taller_8" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/main_fragment_taller_9" />-->

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                app:srcCompat="@drawable/logo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <com.nightonke.boommenu.BoomMenuButton
        android:id="@+id/bmbContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:layout_gravity="bottom|end">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_contacts" />

    </com.nightonke.boommenu.BoomMenuButton>

</android.support.design.widget.CoordinatorLayout>
